adjust(grid): fix right sidebar width Prevent right sidebar from becoming too large.

--- a/assets/scss/grid.scss
+++ b/assets/scss/grid.scss
@@ -28,7 +28,7 @@
         }
         @include respond(xl) {
             max-width: 1680px;
-            --right-sidebar-width: 23%;
+            --right-sidebar-width: 350px;
         }
     }
 
